--- a/package.json
+++ b/package.json
@@ -9,9 +9,21 @@
   "author": "Sarah Atici",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0", 
+    "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "nodemon": "^2.0.7"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/saki1994/TN-Recipes.git"
+  },
+  "keywords": [
+    "Recipe",
+    "Website"
+  ],
+  "bugs": {
+    "url": "https://github.com/saki1994/TN-Recipes/issues"
+  },
+  "homepage": "https://github.com/saki1994/TN-Recipes#readme"
 }
