--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.7"
+    "express": "^4.17.1"
   },
   "repository": {
     "type": "git",
@@ -25,5 +24,8 @@
   "bugs": {
     "url": "https://github.com/saki1994/TN-Recipes/issues"
   },
-  "homepage": "https://github.com/saki1994/TN-Recipes#readme"
+  "homepage": "https://github.com/saki1994/TN-Recipes#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
